hard-gists/9f782f83e25d3c9eb202/run.log
=== Docker Run Log for 9f782f83e25d3c9eb202 ===
Started at: Mi 29. Okt 18:47:33 CET 2025

[2025-10-29 18:47:33] START: Running container for 9f782f83e25d3c9eb202
[2025-10-29 18:47:33] SUCCESS: Container 6b5be348a1d204e4e6a8660a72f061152e91d2dd02decafa64bdfcf201e02460 started for 9f782f83e25d3c9eb202
=== Container logs for 9f782f83e25d3c9eb202 ===
  File "/snippet.py", line 11
    print bs
    ^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9f782f83e25d3c9eb202 ===
[2025-10-29 18:47:35] INFO: Container 6b5be348a1d204e4e6a8660a72f061152e91d2dd02decafa64bdfcf201e02460 has stopped
